--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "express": "3.1.0",
     "ejs": "*",
     "less-middleware": "*",
-    "slug": "*"
+    "slug": "*",
+    "async": "*",
+    "underscore": "*"
   }
 }
